src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --primary: #3b2929;
  --secondary: #fdea9b;
}

body {
  font-family: "Inknut Antiqua", "Poppins";
}

.sec1 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url("/assets/main-bg.png");
  background-size: cover;
  background-position: center;
}

.sec1 h1 {
  color: var(--secondary);
}

.sec1 p {
  width: 90%;
}

.banner {
  font-family: "Poppins", "serif";
  background-color: var(--secondary);
}

.hours {
  font-family: "Inknut Antiqua", "Poppins";
}

.gridItem:hover img {
  transform: scale(1.1);
  transition: all ease-in 0.3s;
  filter: brightness(0.6);
}

.gridItem:hover p {
  display: block;
  font-family: "Poppins", "Serif";
}

@media (min-width: 0px) {
}

@media (min-width: 1024px) {
  .sec1 p {
    width: 45%;
  }

  .sec1 .icons {
    left: 90%;
  }
}

